--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ body{
     justify-content: center;
     margin: auto auto;
     background: white;
+    box-shadow: 0 5px 20px black;
+    border-radius: 8px;
 }
 #slackUserName{
     text-align: center;
@@ -25,6 +27,8 @@ body{
     font-size: 50px;
     font-weight: 700;
     color: rgb(255, 255, 255);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 #slackDispalyImage{
     display: flex;
@@ -36,6 +40,7 @@ body{
 #slackDispalyImage img{
     border-radius: 50%;
     object-fit: contain;
+    width: min(22em, 100%)
 }
 #myTrack{
     text-align: center;
